#2947219 by bryrock, PhilY, Alex Andrascu: Timestamp no more uses site timezone.
#2962548 by mattshoaf, Alex Andrascu: Depends on Core Entity module.
#2992448 by Pasqualle, riddhi.addweb: Warning after install.
#2935402 by DamienMcKenna, ikit-claw: Further improve coding standards
  compliance.
#2935402 by DamienMcKenna: Further improve coding standards compliance.


Backup and Migrate 8.x-4.0, 2018-03-29
--------------------------------------
#2937840 by hugronaphor: Avoid "Unable to find the wrapper "private"" error.


Backup and Migrate 8.x-4.0-rc1, 2018-02-21
------------------------------------------
#2945253 by liliancatanoi90, mlahde, Dinu Rodnitchi: Restoring wrong type of
  file gives "Restore Complete."
#2931261 by Dinu Rodnitchi, yukare, liliancatanoi90: Wrong settings profile in
  schedule edit.
#2939721 by gaurav.kapoor: Variable $out declared but not being used anywhere.
#2930752 by DamienMcKenna, Venkatesh Rajan.J: Fix coding standards compliance
  bugs.
#2912460 by DamienMcKenna: Removed two unused permissions, fixed backup download
  access, test improvements.
#2912460 by Dinu Rodnitchi: Add tests for all basic functionality (D8).
By Alex Andrascu: Removing tests from lib folder. This will be refactored and
  reintroduced in a later version.


Backup and Migrate 8.x-4.0-beta3, 2017-10-12
--------------------------------------------
#2913362 by Dinu Rodnitchi, fietserwin, zheleong, Alex Andrascu, paolo m.: The
  destination upload does not exist.


Backup and Migrate 8.x-4.0-beta2, 2017-10-04
--------------------------------------------
#2913362 by fietserwin: The destination upload does not exist
By Alex Andrascu: Fix for #2913021


Backup and Migrate 8.x-4.0-beta1, 2017-09-29
--------------------------------------------
#2912153 by Alex Andrascu: Roadmap.
#2831297 by szeidler, Alex Andrascu: Exclude cache table contents by default
By Alex Andrascu: Coding standards ammends.
#2912153 by Alex Andrascu: Roadmap\n - MySQL autocommit support for faster