@@ -42,9 +42,10 @@ class ScheduleListBuilder extends ConfigEntityListBuilder {
     $row['period'] = $entity->getPeriodFormatted();
 
     $row['last_run'] = $this->t('Never');
+    $time = \Drupal::time();
     if ($last_run = $entity->getLastRun()) {
       $row['last_run'] = \Drupal::service('date.formatter')->format($last_run, 'small');
-      $row['last_run'] .= ' (' . $this->t('@time ago', ['@time' => \Drupal::service('date.formatter')->formatInterval(REQUEST_TIME - $last_run)]) . ')';
+      $row['last_run'] .= ' (' . $this->t('@time ago', ['@time' => \Drupal::service('date.formatter')->formatInterval($time->getRequestTime() - $last_run)]) . ')';
     }
 
     $row['next_run'] = $this->t('Not Scheduled');
@@ -52,8 +53,8 @@ class ScheduleListBuilder extends ConfigEntityListBuilder {
       $row['next_run'] = $this->t('Disabled');
     }
     elseif ($next_run = $entity->getNextRun()) {
-      $interval = \Drupal::service('date.formatter')->formatInterval(abs($next_run - REQUEST_TIME));
-      if ($next_run > REQUEST_TIME) {
+      $interval = \Drupal::service('date.formatter')->formatInterval(abs($next_run - $time->getRequestTime()));
+      if ($next_run > $time->getRequestTime()) {
         $row['next_run'] = \Drupal::service('date.formatter')->format($next_run, 'small');
         $row['next_run'] .= ' (' . $this->t('in @time', ['@time' => $interval]) . ')';
       }
